# scm-fastapi-app

./: main.py  pyproject.toml
agent/: agent.py  db.py  model.py
tools/: book_slot_tool.py  get_slots_tool.py  verification_tool.py
